<resources>
    <string name="Malaysia">马来西亚</string>
    <string name="MalaysiaCode">60</string>
    <string name="Singapore">新加坡</string>
    <string name="SingaporeCode">65</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_and">和</string>
    <string name="about_beta_version">（Beta : %1$d）</string>
    <string name="about_copyRight">Copyright© 2017–2018 beansauce.net.All rights reserved</string>
    <string name="about_policy"><u>隐私政策</u></string>
    <string name="about_protocol"><u>使用协议</u></string>
    <string name="about_website"><u>www.beansauce.net</u></string>
    <string name="activity_collect_none">暂无收藏记录</string>
    <string name="activity_collection">个人收藏</string>
    <string name="activity_download">离线缓存</string>
    <string name="activity_download_complete">已完成</string>
    <string name="activity_download_delete">删除</string>
    <string name="activity_download_deselectAll">取消全选</string>
    <string name="activity_download_downloading">缓存中%.1f%%</string>
    <string name="activity_download_edit">编辑</string>
    <string name="activity_download_edit_cancel">取消</string>
    <string name="activity_download_error">下载出错,请重试</string>
    <string name="activity_download_none">暂无缓存记录</string>
    <string name="activity_download_pause">暂停</string>
    <string name="activity_download_prepare">准备中</string>
    <string name="activity_download_queue">排队中</string>
    <string name="activity_download_retry">重试</string>
    <string name="activity_download_selectAll">全选</string>
    <string name="activity_download_slash">/</string>
    <string name="activity_download_start">开始</string>
    <string name="activity_download_title_downloaded">完成缓存</string>
    <string name="activity_download_title_downloading">正在缓存</string>
    <string name="activity_history_delete">删除</string>
    <string name="activity_history_edit">编辑</string>
    <string name="activity_history_edit_cancel">取消</string>
    <string name="activity_history_history">播放历史</string>
    <string name="activity_history_none">暂无历史记录</string>
    <string name="activity_history_selectAll">全部选择</string>
    <string name="activity_homepage_beanSauce">豆瓣酱</string>
    <string name="activity_homepage_purchase">purchase</string>
    <string name="activity_homepage_share">share</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_plus">+</string>
    <string name="activity_purchase_loading_error">初始化失败，请您退出后重试</string>
    <string name="activity_share_cannot_swap">您还未达到兑换要求，继续努力哦~</string>
    <string name="activity_share_content">扫描二维码，下载冬瓜视频</string>
    <string name="activity_share_copy_url">复制链接</string>
    <string name="activity_share_friend">好友分享</string>
    <string name="activity_share_friends">朋友圈邀请</string>
    <string name="activity_share_generate_pic_error">保存失败，请您确认是否具有SD卡读取权限</string>
    <string name="activity_share_generate_pic_success">分享码保存成功</string>
    <string name="activity_share_invite_count">已邀请 %s 位</string>
    <string name="activity_share_message_content">"1、特权会员一旦兑换，会扣除相应的邀请人数。
2、若用户存在违规行为，包括但不限于通过技术漏洞/破解/等非法手段进行邀请行为，冬瓜影视有权取消特权会员资格，并对恶意账号进行封号处理。
冬瓜影视保留活动最终解释权"</string>
    <string name="activity_share_message_title">邀请需知：</string>
    <string name="activity_share_name_image_qr_code">冬瓜影视分享码.jpg</string>
    <string name="activity_share_reward_content">活动期间,成功邀请人数3名，即可享受1个月特权会员,成功邀请人数6名，即可享受3个月特权会员,邀请多多，特权会员享受多多！</string>
    <string name="activity_share_reward_title">活动奖励：</string>
    <string name="activity_share_rule">活动规则</string>
    <string name="activity_share_rule_content">活动期间，您可通过邀请好友扫描此页面二维码或复制分享链接给好友，下载冬瓜影视，初次安装并使用即视为分享成功。</string>
    <string name="activity_share_save_code">保存到相册</string>
    <string name="activity_share_swap">兑换中心</string>
    <string name="activity_share_swap_content">您已经成功邀请 %1$s 位好友~</string>
    <string name="activity_share_swap_immediately">立即兑换</string>
    <string name="activity_share_swap_number">还差 %1$s 位</string>
    <string name="activity_share_text_share_url">"冬瓜影视APP给你好看，永久免费在线观看，支持投屏、离线观影，网罗海内外影视资源！下载用戳↓↓↓
%s"</string>
    <string name="activity_share_website">官网: %s</string>
    <string name="activity_share_wx">微信邀请</string>
    <string name="activity_swap_count">邀请人数：%d位</string>
    <string name="activity_swap_count_title">%d位</string>
    <string name="activity_swap_message_confirm" formatted="false">是否继续兑换%d个月%s,这将使用您%d个邀请人数？</string>
    <string name="activity_swap_swap">立即兑换</string>
    <string name="activity_swap_text_cancel">取消</string>
    <string name="activity_swap_text_confirm">兑换</string>
    <string name="activity_swap_time">有效期：%d个月</string>
    <string name="activity_swap_title">可兑换邀请人数</string>
    <string name="activity_userCenter_about">关于我们</string>
    <string name="activity_userCenter_bind_phone">绑定手机</string>
    <string name="activity_userCenter_check">检查更新</string>
    <string name="activity_userCenter_collection">我的收藏</string>
    <string name="activity_userCenter_download">我的缓存</string>
    <string name="activity_userCenter_exit">退出登录</string>
    <string name="activity_userCenter_feedback">意见反馈</string>
    <string name="activity_userCenter_history">播放历史</string>
    <string name="activity_userCenter_login"><u>点击登录</u></string>
    <string name="activity_userCenter_modify_email">修改邮箱</string>
    <string name="activity_userCenter_no_login">未登录</string>
    <string name="activity_userCenter_normalUser">普通会员</string>
    <string name="activity_userCenter_purchase">开通/续费</string>
    <string name="activity_userCenter_set_email">绑定邮箱</string>
    <string name="activity_userCenter_set_password">修改密码</string>
    <string name="activity_userCenter_set_phone">更换手机</string>
    <string name="activity_userCenter_shared">好友分享</string>
    <string name="activity_userCenter_title">个人中心</string>
    <string name="activity_userCenter_vip">特权会员-%1$s天后到期</string>
    <string name="activity_userCenter_vip_expire">特权会员已过期</string>
    <string name="activity_userCenter_vip_lastDay">即将到期：%1$s</string>
    <string name="activity_userCenter_vip_learn_more">了解详情</string>
    <string name="activity_userCenter_vip_permission">特权功能</string>
    <string name="app_name">冬瓜影视 CSA</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="bottom_sheet_behavior">android.support.design.widget.BottomSheetBehavior</string>
    <string name="c_buoycircle_abort">YES</string>
    <string name="c_buoycircle_abort_message">Stop download?</string>
    <string name="c_buoycircle_appmarket_name">HUAWEI AppGallery</string>
    <string name="c_buoycircle_auto_hide_notice">Drag here to hide</string>
    <string name="c_buoycircle_cancel">CANCEL</string>
    <string name="c_buoycircle_check_failure">Update check failed.</string>
    <string name="c_buoycircle_checking">Checking for updates…</string>
    <string name="c_buoycircle_confirm">OK</string>
    <string name="c_buoycircle_download_failure">HUAWEI AppGallery could not be downloaded.</string>
    <string name="c_buoycircle_download_no_space">Not enough free space. Unable to download.</string>
    <string name="c_buoycircle_download_retry">Download failed. Try again?</string>
    <string name="c_buoycircle_downloading_loading">Downloading…</string>
    <string name="c_buoycircle_floatwindow_click_fail_toast">Enable Secondary launch for HUAWEI AppGallery in Phone Manager or Settings.</string>
    <string name="c_buoycircle_hide_guide_btn_cancel">CANCEL</string>
    <string name="c_buoycircle_hide_guide_btn_confirm">HIDE</string>
    <string name="c_buoycircle_hide_guide_content_nosensor">After balloons are hidden, you will need to relaunch the app to show them again.</string>
    <string name="c_buoycircle_hide_guide_content_sensor">After balloons are hidden, flip your device to show them again.</string>
    <string name="c_buoycircle_hide_guide_noremind">"Don't remind me again"</string>
    <string name="c_buoycircle_hide_guide_title">Hide balloons</string>
    <string name="china">中国大陆</string>
    <string name="chinaCode">86</string>
    <string name="contact_email_content"><u>dongguayingshi@gmail.com</u></string>
    <string name="contact_email_title">邮箱：</string>
    <string name="contact_facebook_content">fb.me/nanguayingshi</string>
    <string name="contact_facebook_title">Facebook：</string>
    <string name="contact_qq_content"><u>2258641004</u></string>
    <string name="contact_qq_group_content"><u>782098072</u></string>
    <string name="contact_qq_group_title">官方qq群：</string>
    <string name="contact_qq_title">官方qq：</string>
    <string name="contact_telegram_content"><u>nanguayingshi</u></string>
    <string name="contact_telegram_title">Telegram电报：</string>
    <string name="contact_website_content"><u>dg100.app</u></string>
    <string name="contact_website_title">官网：</string>
    <string name="contact_weibo_content"><u>冬瓜视频APP</u></string>
    <string name="contact_weibo_title">微博：</string>
    <string name="current_phone_setPhone">当前绑定号码</string>
    <string name="dialog_confirm">确认</string>
    <string name="region">地区</string>
    <string name="setPhone_input_newPhone">请输入手机号码</string>
    <string name="signup_get_check">获取验证码</string>
    <string name="signup_input_check">验证码</string>
</resources>