<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include app:layout_constraintTop_toTopOf="parent" layout="@layout/bean_include_toolbar_new" />
    <ImageView android:id="@id/iv_logo_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="110.0dip" android:src="@drawable/pic_logo_about" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_size_18sp" android:textColor="@color/about_version_font" android:id="@id/tv_version_about" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_margin_version2Logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_logo_about" />
    <android.support.constraint.ConstraintLayout android:id="@id/layout_background_about" android:background="#ff444444" android:paddingTop="21.0dip" android:paddingBottom="21.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="27.0dip" android:paddingStart="13.0dip" android:paddingEnd="13.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_version_about">
        <TextView android:id="@id/tv_telegramTitle_about" android:visibility="gone" android:text="@string/contact_telegram_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/contact_title" />
        <TextView android:autoLink="none" android:id="@id/tv_telegram_about" android:visibility="gone" android:text="@string/contact_telegram_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_telegramTitle_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_facebookTitle_about" android:visibility="gone" android:text="@string/contact_facebook_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_telegram_about" style="@style/contact_title" />
        <TextView android:visibility="gone" android:text="@string/contact_facebook_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_facebookTitle_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_qq_group_about" android:visibility="gone" android:text="@string/contact_qq_group_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_facebookTitle_about" style="@style/contact_title" />
        <TextView android:autoLink="none" android:visibility="gone" android:text="@string/contact_qq_group_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_qq_group_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_qq_about" android:visibility="gone" android:text="@string/contact_qq_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_qq_group_about" style="@style/contact_title" />
        <TextView android:autoLink="none" android:visibility="gone" android:text="@string/contact_qq_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_qq_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_weibo_about" android:visibility="gone" android:text="@string/contact_weibo_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_qq_about" style="@style/contact_title" />
        <TextView android:autoLink="none" android:visibility="gone" android:text="@string/contact_weibo_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_weibo_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_emailTitle_about" android:text="@string/contact_email_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_weibo_about" style="@style/contact_title" />
        <TextView android:autoLink="email" android:text="@string/contact_email_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_emailTitle_about" style="@style/contact_content" />
        <TextView android:id="@id/tv_websiteTitle_about" android:text="@string/contact_website_title" app:layout_constraintEnd_toStartOf="@id/barrier" app:layout_constraintTop_toBottomOf="@id/tv_emailTitle_about" style="@style/contact_title" />
        <TextView android:text="@string/contact_website_content" app:layout_constraintStart_toEndOf="@id/barrier" app:layout_constraintTop_toTopOf="@id/tv_websiteTitle_about" style="@style/contact_content" />
        <android.support.constraint.Barrier android:orientation="vertical" android:id="@id/barrier" android:layout_width="wrap_content" android:layout_height="wrap_content" app:barrierDirection="end" app:constraint_referenced_ids="tv_telegramTitle_about,tv_websiteTitle_about,tv_facebookTitle_about,tv_emailTitle_about" />
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>