<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include app:layout_constraintTop_toTopOf="parent" layout="@layout/bean_include_toolbar_new" />
    <ImageView android:id="@id/iv_logo_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="110.0dip" android:src="@drawable/pic_logo" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_size_18sp" android:textColor="@color/about_version_font" android:id="@id/tv_version_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="@dimen/about_margin_version2Logo" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_logo_contract" />
    <ImageView android:id="@id/iv_divider_contract" android:background="#ff999999" android:layout_width="30.0dip" android:layout_height="2.0dip" android:layout_marginTop="@dimen/about_margin_divider" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_version_contract" />
    <TextView android:id="@id/tv_telegramTitle_contract" android:layout_marginTop="@dimen/contact_margin_content2Title" android:text="@string/contact_telegram_title" app:layout_constraintEnd_toStartOf="@id/tv_telegram_contract" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_divider_contract" style="@style/contact_title" />
    <TextView android:id="@id/tv_telegram_contract" android:text="@string/contact_telegram_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_telegramTitle_contract" app:layout_constraintTop_toTopOf="@id/tv_telegramTitle_contract" style="@style/contact_content" />
    <TextView android:id="@id/tv_websiteTitle_contract" android:text="@string/contact_website_title" app:layout_constraintStart_toStartOf="@id/tv_telegramTitle_contract" app:layout_constraintTop_toBottomOf="@id/tv_telegramTitle_contract" style="@style/contact_title" />
    <TextView android:text="@string/contact_website_content" app:layout_constraintStart_toEndOf="@id/tv_websiteTitle_contract" app:layout_constraintTop_toTopOf="@id/tv_websiteTitle_contract" style="@style/contact_content" />
    <TextView android:id="@id/tv_facebookTitle_contract" android:text="@string/contact_facebook_title" app:layout_constraintStart_toStartOf="@id/tv_telegramTitle_contract" app:layout_constraintTop_toBottomOf="@id/tv_websiteTitle_contract" style="@style/contact_title" />
    <TextView android:text="@string/contact_facebook_content" app:layout_constraintStart_toEndOf="@id/tv_facebookTitle_contract" app:layout_constraintTop_toTopOf="@id/tv_facebookTitle_contract" style="@style/contact_content" />
    <TextView android:id="@id/tv_emailTitle_contract" android:text="@string/contact_email_title" app:layout_constraintStart_toStartOf="@id/tv_telegramTitle_contract" app:layout_constraintTop_toBottomOf="@id/tv_facebookTitle_contract" style="@style/contact_title" />
    <TextView android:autoLink="email" android:text="@string/contact_email_content" app:layout_constraintStart_toEndOf="@id/tv_emailTitle_contract" app:layout_constraintTop_toTopOf="@id/tv_emailTitle_contract" style="@style/contact_content" />
    <TextView android:textSize="@dimen/text_size_10sp" android:textColor="@color/about_font_normal" android:gravity="center" android:id="@id/tv_copyRight_contract" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="@dimen/about_margin_rights2bottom" android:text="@string/about_copyRight" app:layout_constraintBottom_toBottomOf="parent" />
    <TextView android:textSize="@dimen/text_size_14sp" android:textColor="@color/about_font_policy" android:id="@id/tv_userPolicy_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_protocol" android:layout_marginEnd="@dimen/about_margin_between" app:layout_constraintBottom_toTopOf="@id/tv_copyRight_contract" app:layout_constraintEnd_toStartOf="@id/tv_and_contract" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" />
    <TextView android:textSize="@dimen/text_size_14sp" android:textColor="@color/about_font_policy" android:id="@id/tv_and_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_and" app:layout_constraintBottom_toTopOf="@id/tv_copyRight_contract" app:layout_constraintEnd_toStartOf="@id/tv_privatePolicy_contract" app:layout_constraintStart_toEndOf="@id/tv_userPolicy_contract" />
    <TextView android:textSize="@dimen/text_size_14sp" android:textColor="@color/about_font_policy" android:id="@id/tv_privatePolicy_contract" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/about_policy" android:layout_marginStart="@dimen/about_margin_between" app:layout_constraintBottom_toTopOf="@id/tv_copyRight_contract" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_and_contract" />
</android.support.constraint.ConstraintLayout>