<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="#ff444444" android:paddingTop="18.0dip" android:paddingBottom="18.0dip" android:layout_width="285.0dip" android:layout_height="422.0dip" android:paddingStart="13.0dip" android:paddingEnd="13.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textStyle="bold" android:id="@id/tv_rule_title" android:text="@string/activity_share_rule" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" style="@style/text_share_rule_dialog_title" />
    <TextView android:id="@id/tv_rule_content" android:layout_marginTop="36.0dip" android:text="@string/activity_share_rule_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_rule_title" style="@style/text_share_rule_dialog_content" />
    <TextView android:textSize="@dimen/share_textSize_rule_dialog_content" android:id="@id/tv_reward_title" android:layout_marginTop="15.0dip" android:text="@string/activity_share_reward_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_rule_content" style="@style/text_share_rule_dialog_title" />
    <TextView android:id="@id/tv_reward_content" android:layout_width="0.0dip" android:text="@string/activity_share_reward_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_reward_title" app:layout_constraintTop_toTopOf="@id/tv_reward_title" style="@style/text_share_rule_dialog_content" />
    <TextView android:textSize="@dimen/share_textSize_rule_dialog_content" android:id="@id/tv_message_title" android:layout_marginTop="15.0dip" android:text="@string/activity_share_message_title" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_reward_content" style="@style/text_share_rule_dialog_title" />
    <TextView android:id="@id/tv_message_content" android:layout_width="0.0dip" android:text="@string/activity_share_message_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_message_title" app:layout_constraintTop_toTopOf="@id/tv_message_title" style="@style/text_share_rule_dialog_content" />
</android.support.constraint.ConstraintLayout>