<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout android:background="#ff333333" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include app:layout_constraintTop_toTopOf="parent" layout="@layout/bean_include_toolbar_new" />
    <ImageView android:id="@id/iv_logo" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="90.0dip" android:src="@drawable/pic_logo_about" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
    <TextView android:textSize="@dimen/text_size_16sp" android:textColor="@color/setPhone_font_title" android:id="@id/tv_curPhone_setPhone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="45.0dip" android:text="@string/current_phone_setPhone" app:layout_constraintEnd_toStartOf="@id/tv_phoneNum_setPhone" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_logo" />
    <TextView android:textSize="@dimen/text_size_16sp" android:textColor="@color/setPhone_font_content" android:id="@id/tv_phoneNum_setPhone" android:layout_height="wrap_content" android:layout_marginStart="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/tv_curPhone_setPhone" app:layout_constraintTop_toTopOf="@id/tv_curPhone_setPhone" style="@style/setPhone_editText_phone" />
    <EditText android:id="@id/et_checkCode_setPhone" android:hint="@string/signup_input_check" android:inputType="number" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_newPhone_setPhone" style="@style/et_input_signup" />
    <TextView android:id="@id/tv_btn_check_setPhone" android:text="@string/signup_get_check" app:layout_constraintBottom_toBottomOf="@id/et_checkCode_setPhone" app:layout_constraintEnd_toEndOf="@id/et_checkCode_setPhone" style="@style/setPhone_countryCode" />
    <TextView android:text="@string/region" android:layout_marginEnd="@dimen/login_padding_input_left_right" app:layout_constraintEnd_toEndOf="@id/tv_background_newCountryCode_setPhone" app:layout_constraintTop_toTopOf="@id/tv_background_newCountryCode_setPhone" style="@style/setPhone_countryCode" />
    <TextView android:id="@id/tv_selectCountry_newPhone_setPhone" android:text="@string/china" app:layout_constraintStart_toStartOf="@id/et_newPhone_setPhone" app:layout_constraintTop_toTopOf="@id/tv_background_newCountryCode_setPhone" style="@style/setPhone_selectCountry" />
    <TextView android:id="@id/tv_plus" android:text="@string/activity_login_plus" android:layout_marginStart="5.0dip" app:layout_constraintStart_toEndOf="@id/tv_selectCountry_newPhone_setPhone" app:layout_constraintTop_toTopOf="@id/tv_background_newCountryCode_setPhone" style="@style/setPhone_selectCountry" />
    <TextView android:id="@id/tv_countryCode_newPhone_setPhone" android:text="@string/chinaCode" android:layout_marginStart="0.0dip" app:layout_constraintStart_toEndOf="@id/tv_plus" app:layout_constraintTop_toTopOf="@id/tv_background_newCountryCode_setPhone" style="@style/setPhone_selectCountry" />
    <TextView android:id="@id/tv_background_newCountryCode_setPhone" android:background="@drawable/shape_background_input_login" android:layout_width="@dimen/signup_input_normal_width" android:layout_height="@dimen/signup_input_normal_height" android:layout_marginTop="27.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_curPhone_setPhone" />
    <EditText android:id="@id/et_newPhone_setPhone" android:hint="@string/setPhone_input_newPhone" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_selectCountry_newPhone_setPhone" style="@style/et_input_signup" />
    <TextView android:textColor="@color/colorWhite" android:id="@id/tv_btn_confirm_setPhone" android:background="@drawable/shape_register_btn_signup" android:layout_marginTop="@dimen/login_margin_input_between" android:text="@string/dialog_confirm" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/et_checkCode_setPhone" style="@style/tv_btn_login" />
</android.support.constraint.ConstraintLayout>