<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView android:background="@color/colorWhite" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.constraint.ConstraintLayout android:paddingBottom="40.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <ImageView android:id="@id/iv_title_share_fragment" android:paddingBottom="20.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:src="@drawable/ic_share_bg_top" android:adjustViewBounds="true" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <ImageView android:id="@id/iv_qrCode_share_fragment" android:layout_width="@dimen/share_height_QRCode_around" android:layout_height="@dimen/share_height_QRCode_around" app:layout_constraintBottom_toBottomOf="@id/iv_title_share_fragment" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" />
        <TextView android:textSize="@dimen/text_size_14sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tv_rule_share_fragment" android:background="@drawable/shape_bg_btn_share_rule" android:paddingTop="3.0dip" android:paddingBottom="3.0dip" android:layout_width="24.0dip" android:layout_height="wrap_content" android:text="@string/activity_share_rule" android:ems="1" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="@id/iv_qrCode_share_fragment" />
        <TextView android:id="@id/tv_content_share_fragment" android:layout_marginTop="13.0dip" android:text="@string/activity_share_content" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/iv_qrCode_share_fragment" style="@style/text_share_content" />
        <TextView android:id="@id/tv_website_share_fragment" android:layout_marginTop="12.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_content_share_fragment" style="@style/text_share_content" />
        <TextView android:textSize="24.0sp" android:id="@id/tv_invite_count_share_fragment" android:layout_marginTop="14.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_website_share_fragment" style="@style/text_share_content" />
        <TextView android:textSize="@dimen/text_size_18sp" android:textColor="@color/colorWhite" android:gravity="center" android:id="@id/tv_swapBtn_share_fragment" android:background="@drawable/shape_bg_btn_share_center" android:layout_width="180.0dip" android:layout_height="39.0dip" android:layout_marginTop="15.0dip" android:text="@string/activity_share_swap_immediately" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_invite_count_share_fragment" />
        <TextView android:id="@id/iv_weChat_share_fragment" android:layout_width="80.0dip" android:layout_marginTop="40.0dip" android:text="@string/activity_share_wx" android:drawableTop="@drawable/ic_sh_wx" app:layout_constraintEnd_toStartOf="@id/iv_friend_share_fragment" app:layout_constraintHorizontal_chainStyle="packed" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_swapBtn_share_fragment" style="@style/share_shareIcon" />
        <TextView android:id="@id/iv_friend_share_fragment" android:layout_width="80.0dip" android:text="@string/activity_share_friends" android:drawableTop="@drawable/ic_sh_py" app:layout_constraintEnd_toStartOf="@id/iv_url_share_fragment" app:layout_constraintStart_toEndOf="@id/iv_weChat_share_fragment" app:layout_constraintTop_toTopOf="@id/iv_weChat_share_fragment" style="@style/share_shareIcon" />
        <TextView android:id="@id/iv_url_share_fragment" android:layout_width="80.0dip" android:text="@string/activity_share_copy_url" android:drawableTop="@drawable/ic_sh_url" app:layout_constraintEnd_toStartOf="@id/tv_save_code_share_fragment" app:layout_constraintStart_toEndOf="@id/iv_friend_share_fragment" app:layout_constraintTop_toTopOf="@id/iv_weChat_share_fragment" style="@style/share_shareIcon" />
        <TextView android:id="@id/tv_save_code_share_fragment" android:layout_width="80.0dip" android:text="@string/activity_share_save_code" android:drawableTop="@drawable/ic_local_share" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@id/iv_url_share_fragment" app:layout_constraintTop_toTopOf="@id/iv_weChat_share_fragment" style="@style/share_shareIcon" />
    </android.support.constraint.ConstraintLayout>
</android.support.v4.widget.NestedScrollView>